exports[`addUncaughtJavaExceptionAlarm: with logHandler creates subscription filter and no metric filter 1`] = `
{
  "Resources": {
    "HandlerUJ2EE2E5D99": {
      "DependsOn": [
        "HandlerUJ2ServiceRole65D1C30E",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "exports.handler = async () => {}",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "HandlerUJ2ServiceRole65D1C30E",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "HandlerUJ2ServiceRole65D1C30E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogGroupUJ23A78E572": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "LogGroupUJ2lifligcdklogcontenttoslackuncaughtexceptionsubscriptionCanInvokeLambdaBD8CA9BD": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "HandlerUJ2EE2E5D99",
            "Arn",
          ],
        },
        "Principal": "logs.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "LogGroupUJ23A78E572",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "LogGroupUJ2lifligcdklogcontenttoslackuncaughtexceptionsubscriptionF0227099": {
      "DependsOn": [
        "LogGroupUJ2lifligcdklogcontenttoslackuncaughtexceptionsubscriptionCanInvokeLambdaBD8CA9BD",
      ],
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "HandlerUJ2EE2E5D99",
            "Arn",
          ],
        },
        "FilterPattern": ""Exception in thread"",
        "LogGroupName": {
          "Ref": "LogGroupUJ23A78E572",
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "TestedLambdaUJ26B4E6C6C": {
      "DependsOn": [
        "TestedLambdaUJ2ServiceRole1FC8A7B8",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "exports.handler = async () => {}",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "TestedLambdaUJ2ServiceRole1FC8A7B8",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestedLambdaUJ2ServiceRole1FC8A7B8": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TopicUJ287624DBD": {
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`addUncaughtJavaExceptionAlarm: without logHandler creates metric filter and alarm 1`] = `
{
  "Resources": {
    "LambdaAlarmsUJ1UncaughtJavaExceptionLogAlarmFAECCDAD": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicUJ1EE39CBE9",
          },
        ],
        "AlarmDescription": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "TestedLambdaUJ18777A436",
              },
              " logged an uncaught Java exception",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "UncaughtJavaException",
        "Namespace": {
          "Fn::Join": [
            "",
            [
              "stack/Stack-UJ-1/",
              {
                "Ref": "TestedLambdaUJ18777A436",
              },
              "/UncaughtJavaException",
            ],
          ],
        },
        "OKActions": [
          {
            "Ref": "TopicUJ1EE39CBE9",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "LogGroupUJ185C77CFA": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "LogGroupUJ1UncaughtJavaExceptionFilter8F8A9A47": {
      "Properties": {
        "FilterPattern": ""Exception in thread"",
        "LogGroupName": {
          "Ref": "LogGroupUJ185C77CFA",
        },
        "MetricTransformations": [
          {
            "MetricName": "UncaughtJavaException",
            "MetricNamespace": {
              "Fn::Join": [
                "",
                [
                  "stack/Stack-UJ-1/",
                  {
                    "Ref": "TestedLambdaUJ18777A436",
                  },
                  "/UncaughtJavaException",
                ],
              ],
            },
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "TestedLambdaUJ18777A436": {
      "DependsOn": [
        "TestedLambdaUJ1ServiceRole83D4668E",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "exports.handler = async () => {}",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "TestedLambdaUJ1ServiceRole83D4668E",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestedLambdaUJ1ServiceRole83D4668E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TopicUJ1EE39CBE9": {
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`creates invocation error alarms (single and multiple) with defaults 1`] = `
{
  "Resources": {
    "LambdaAlarms3InvocationSeriesAlarm9D294367": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "Topic3DEAE47A7",
          },
        ],
        "AlarmDescription": {
          "Fn::Join": [
            "",
            [
              "Invocation for '",
              {
                "Ref": "TestedLambda32F7528BF",
              },
              "' failed repeatedly. ",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "FunctionName",
            "Value": {
              "Ref": "TestedLambda32F7528BF",
            },
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "OKActions": [
          {
            "Ref": "Topic3DEAE47A7",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "LambdaAlarms3SingleInvocationAlarm753BA611": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "Topic3DEAE47A7",
          },
        ],
        "AlarmDescription": {
          "Fn::Join": [
            "",
            [
              "Invocation for '",
              {
                "Ref": "TestedLambda32F7528BF",
              },
              "' had a single failure. ",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "FunctionName",
            "Value": {
              "Ref": "TestedLambda32F7528BF",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "OKActions": [
          {
            "Ref": "Topic3DEAE47A7",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TestedLambda32F7528BF": {
      "DependsOn": [
        "TestedLambda3ServiceRole2D03AE9A",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "exports.handler = async () => {}",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "TestedLambda3ServiceRole2D03AE9A",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestedLambda3ServiceRole2D03AE9A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Topic3DEAE47A7": {
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`no handler: metric-based error filter is created 1`] = `
{
  "Resources": {
    "LambdaAlarmsErrorLogAlarm715A94C8": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "TestedLambdaAAAB7B55",
              },
              " logged an error",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": {
          "Fn::Join": [
            "",
            [
              "stack/Stack/",
              {
                "Ref": "TestedLambdaAAAB7B55",
              },
              "/Errors",
            ],
          ],
        },
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "LogGroupErrorMetricFilter551B92D2": {
      "Properties": {
        "FilterPattern": "{ ($.level = "ERROR") || ($.level = "FATAL") || ($.requestInfo.status.code = "INTERNAL_SERVER_ERROR") }",
        "LogGroupName": {
          "Ref": "LogGroupF5B46931",
        },
        "MetricTransformations": [
          {
            "MetricName": "Errors",
            "MetricNamespace": {
              "Fn::Join": [
                "",
                [
                  "stack/Stack/",
                  {
                    "Ref": "TestedLambdaAAAB7B55",
                  },
                  "/Errors",
                ],
              ],
            },
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "LogGroupF5B46931": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "TestedLambdaAAAB7B55": {
      "DependsOn": [
        "TestedLambdaServiceRole1EFFE97F",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "exports.handler = async () => {}",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "TestedLambdaServiceRole1EFFE97F",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestedLambdaServiceRole1EFFE97F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TopicBFC7AF6E": {
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`with handler: subscription filter is created and metric filter omitted 1`] = `
{
  "Resources": {
    "Handler886CB40B": {
      "DependsOn": [
        "HandlerServiceRoleFCDC14AE",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "exports.handler = async () => {}",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "HandlerServiceRoleFCDC14AE",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "HandlerServiceRoleFCDC14AE": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogGroup2477F707C": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "LogGroup2lifligcdklogcontenttoslackerrorsubscription2468A563": {
      "DependsOn": [
        "LogGroup2lifligcdklogcontenttoslackerrorsubscriptionCanInvokeLambda8C05276F",
      ],
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "Handler886CB40B",
            "Arn",
          ],
        },
        "FilterPattern": "{ ($.level = "ERROR") || ($.level = "FATAL") || ($.requestInfo.status.code = "INTERNAL_SERVER_ERROR") }",
        "LogGroupName": {
          "Ref": "LogGroup2477F707C",
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "LogGroup2lifligcdklogcontenttoslackerrorsubscriptionCanInvokeLambda8C05276F": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "Handler886CB40B",
            "Arn",
          ],
        },
        "Principal": "logs.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "LogGroup2477F707C",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "TestedLambda267C519AF": {
      "DependsOn": [
        "TestedLambda2ServiceRole41530E20",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "exports.handler = async () => {}",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "TestedLambda2ServiceRole41530E20",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestedLambda2ServiceRole41530E20": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Topic269377B75": {
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;
